# nast

./: pyproject.toml
src/nast/: model.py
src/nast/aio/: api.py
tests/: test_aio_api.py  test_model.py
tests/data/nations/: testlandia.xml
tests/data/regions/: testregionia.xml  the_rejected_realms.xml
